@@ -1,3 +1,5 @@
+######## 2014-12-12 ##########
+alter table shop_flashsale_product add column hot_value int(11) NOT NULL;
 ######## 2014-12-9 ##########
 alter table shop_flashsale_product add column status varchar(16) NOT NULL;
 update shop_flashsale_product set status='wait';
